# ZKML-Soroban

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  justfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/zkml-common/: Cargo.toml
crates/zkml-common/src/: activation.rs  commitment.rs  error.rs  fixed_point.rs  inference.rs  lib.rs  merkle.rs  models.rs  proof.rs  tensor.rs
crates/zkml-common/tests/: fixed_point_props.proptest-regressions  fixed_point_props.rs
crates/zkml-prover/: Cargo.toml  README.md
crates/zkml-prover/examples/: generate_onnx_fixtures.rs
crates/zkml-prover/src/: inference.rs  lib.rs  main.rs  model_io.rs  onnx.rs  prover.rs  quantization.rs  timing.rs
crates/zkml-prover/src/onnx/: error.rs  mod.rs  proto.rs  validate.rs
crates/zkml-prover/tests/: example_inference.rs  golden_vectors.rs  onnx_import.rs  zkvm_receipt.rs
crates/zkml-prover/tests/fixtures/: README.md  decision_tree_valid.onnx  linear_classifier_valid.onnx  low_opset_tree.onnx  skl2onnx_like_tree.onnx  unsupported_conv.onnx
crates/zkml-prover/tests/vectors/: README.md  compute_expected.py  decision_tree.json  decision_tree_boundary.json  decision_tree_degenerate.json  decision_tree_depth1.json  decision_tree_depth3.json  error_feature_mismatch.json  error_out_of_range_child.json  logistic_regression_negative.json  logistic_regression_positive.json  logistic_regression_zero.json
crates/zkml-verifier/: Cargo.toml
crates/zkml-verifier/src/: lib.rs
crates/zkml-verifier/test_snapshots/test/: test_double_initialize.1.json  test_initialize.1.json
crates/zkml-verifier/test_snapshots/test_verify/: verify_records_and_counts.1.json
docs/: README.md  architecture.md  benchmarks.md  cli.md  commitments.md  devlog.md  diagrams.md  examples.md  faq.md  fixed-point.md  glossary.md  milestones.md  model-format.md  models.md  onnx-import.md  proof-format.md  proving.md  references.md  roadmap.md  security-notes.md  technical-overview.md  testing.md  threat-model.md  use-cases.md  verifier-interface.md
examples/models/: credit_lr.json  kyc_tree.json
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
