[package]
name = "zkml-prover"
description = "Off-chain ML inference and ZK proof generation for zkml-soroban"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Print timing information for inference and proving steps.
timing = []
# RISC Zero guest proving. Enable with `--features zkvm` (requires rzup toolchain).
# CI runs this under RISC0_DEV_MODE=1 in the zkvm job.
zkvm = ["dep:risc0-zkvm", "dep:zkml-methods"]

[dependencies]
zkml-common = { path = "../zkml-common" }
serde = { workspace = true }
serde_json = "1"

# Phase 1: RISC Zero zkVM (pinned exactly; see docs/proving.md).
risc0-zkvm = { workspace = true, optional = true }
zkml-methods = { path = "../../methods", optional = true }

# ONNX protobuf decoding (pinned; API surface used by the importer foundation).
prost = "=0.13.5"
